fix editor lost completely once empty

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,8 @@ textarea,
   position: relative;
   max-width: 100%;
   overflow: hidden;
-  margin: 8px;
+  padding: 8px;
+  height: 100%;
 }
 
 /* .editor textarea {
